pulumi/Hands on/Task 2 IAC/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-ingress
  namespace: ingress-system
  annotations:
    kubernetes.io/ingress.class: example-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: example-nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
